fixes overflow issues with pages

--- a/src/layout-page/layout-page.less
+++ b/src/layout-page/layout-page.less
@@ -18,10 +18,12 @@
 	display: flex;
 	order: 1;
 	flex-grow: 1;
+	overflow: hidden;
 	
 	& > * {
 		display: flex;
 		flex-grow: 1;
+		max-width: 100%;
 	}
     
 // ToDo: figure out a better way to do this
